fix: overflow in mobile version

--- a/src/components/swiper/slider-nav-buttons/slider-nav-buttons.module.scss
+++ b/src/components/swiper/slider-nav-buttons/slider-nav-buttons.module.scss
@@ -10,6 +10,9 @@
   height: 40px;
   background: white;
   border-radius: 50%;
+  @media (max-width: 320px) {
+    display: none;
+  }
 }
 
 .prevButton{
